--- a/index.html
+++ b/index.html
@@ -1,55 +1,50 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Adyatma Damarjati Amarhathany</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Portfolio - Design</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
 
   <header>
-    <nav>
-      <h1>Adyatma Damarjati</h1>
-      <ul>
-        <li><a href="#about">Tentang</a></li>
-        <li><a href="#skills">Skill</a></li>
-        <li><a href="#contact">Kontak</a></li>
-      </ul>
-    </nav>
+    <h1>DESIGN PORTFOLIO</h1>
+    <p>"Creativity is intelligence having fun." – Albert Einstein</p>
   </header>
 
-  <section class="hero">
+  <section class="bio">
     <h2>Adyatma Damarjati Amarhathany</h2>
-    <p>Mahasiswa Kartografi & Penginderaan Jauh | Designer & Social Media Branding | Yogyakarta</p>
-    <button id="scrollButton">Lihat Selengkapnya</button>
+    <p><strong>Origin:</strong> Yogyakarta</p>
+    <p><strong>University:</strong> Universitas Gadjah Mada</p>
+    <p><strong>Major:</strong> Kartografi dan Penginderaan Jauh, Fakultas Geografi</p>
+    <p><strong>Skills:</strong> Designer & Social Media Branding Strategist</p>
   </section>
 
-  <section id="about" class="about">
-    <h3 class="section-title">Tentang Saya</h3>
-    <p>Halo! Saya Adyatma Damarjati Amarhathany, berasal dari Yogyakarta. Saat ini saya berkuliah di <strong>Universitas Gadjah Mada</strong>, Program Studi Kartografi dan Penginderaan Jauh, Fakultas Geografi.</p>
-  </section>
-
-  <section id="skills" class="skills">
-    <h3 class="section-title">Skill</h3>
-    <div class="skills-list">
-      <div class="skill">Designer</div>
-      <div class="skill">Social Media Branding</div>
-      <div class="skill">UI/UX Basic</div>
-      <div class="skill">Content Planning</div>
+  <main class="grid">
+    <div class="item">
+      <img src="file:///C:/Users/cisdi/Portofolio/IMG/Frame%201.png" alt="Design 1">
+      <div class="overlay"><h2>SIGHTMENTED.ID</h2></div>
     </div>
-  </section>
-
-  <section id="contact" class="contact">
-    <h3 class="section-title">Kontak</h3>
-    <p>Ingin bekerja sama atau berdiskusi? Hubungi saya melalui email: <strong>adyatma@email.com</strong> atau media sosial.</p>
-  </section>
+    <div class="item">
+      <img src="file:///C:/Users/cisdi/Portofolio/IMG/Frame%202.png" alt="Design 2">
+      <div class="overlay"><h2>KOPILOAK</h2></div>
+    </div>
+    <div class="item">
+      <img src="file:///C:/Users/cisdi/Portofolio/IMG/Frame%203.png" alt="Design 3">
+      <div class="overlay"><h2>PORTEIGHT</h2></div>
+    </div>
+  </main>
 
   <footer>
-    © 2025 Adyatma Damarjati Amarhathany — All rights reserved.
+    <h3>Get in Touch</h3>
+    <p><strong>Email:</strong> <a href="mailto:damarjati876@gmail.com">damarjati876@gmail.com</a></p>
+    <p><strong>Instagram:</strong> <a href="https://instagram.com/damarhtny" target="_blank">@damarhtny</a></p>
+    <p class="footer-tagline">“Design is the silent ambassador of your brand.” – Paul Rand</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
+
