--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 
   <main class="grid">
     <div class="item">
-      <img src="IMG/Frame%201.png" alt="Design 1">
+      <img src="Frame%201.png" alt="Design 1">
       <div class="overlay"><h2>SIGHTMENTED.ID</h2></div>
     </div>
     <div class="item">
-      <img src="IMG/Frame%202.png" alt="Design 2">
+      <img src="Frame%202.png" alt="Design 2">
       <div class="overlay"><h2>KOPILOAK</h2></div>
     </div>
     <div class="item">
-      <img src="IMG/Frame%203.png" alt="Design 3">
+      <img src="Frame%203.png" alt="Design 3">
       <div class="overlay"><h2>PORTEIGHT</h2></div>
     </div>
   </main>
