--- a/sightmented.html
+++ b/sightmented.html
@@ -15,29 +15,30 @@
       
       <!-- Kartu Gambar -->
       <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="https://source.unsplash.com/random/600x400?sig=1" alt="Foto 1" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+        <img src="Frame 96.png" alt="Foto 1" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
       </div>
 
       <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="https://source.unsplash.com/random/600x400?sig=2" alt="Foto 2" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+        <img src="Frame 4.png" alt="Foto 2" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
       </div>
 
       <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="https://source.unsplash.com/random/600x400?sig=3" alt="Foto 3" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+        <img src="Frame 99.png" alt="Foto 3" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
       </div>
 
       <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="https://source.unsplash.com/random/600x400?sig=4" alt="Foto 4" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+        <img src="Frame 101.png" alt="Foto 4" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
       </div>
 
       <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="https://source.unsplash.com/random/600x400?sig=5" alt="Foto 5" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+        <img src="Frame 100.png" alt="Foto 5" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
       </div>
 
       <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="https://source.unsplash.com/random/600x400?sig=6" alt="Foto 6" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+        <img src="Frame 97.png" alt="Foto 6" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
       </div>
 
+      
     </div>
   </div>
 
