--- a/index.html
+++ b/index.html
@@ -1,50 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Portfolio - Design</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>SIGHTMENTED.ID</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-gray-100 font-sans">
 
-  <header>
-    <h1>DESIGN PORTFOLIO</h1>
-    <p>"Creativity is intelligence having fun." – Albert Einstein</p>
-  </header>
+  <div class="max-w-7xl mx-auto px-4 py-10">
+    <h1 class="text-4xl font-bold text-center text-gray-800 mb-10">SIGHTMENTED.ID</h1>
 
-  <section class="bio">
-    <h2>Adyatma Damarjati Amarhathany</h2>
-    <p><strong>Origin:</strong> Yogyakarta</p>
-    <p><strong>University:</strong> Universitas Gadjah Mada</p>
-    <p><strong>Major:</strong> Kartografi dan Penginderaan Jauh, Fakultas Geografi</p>
-    <p><strong>Skills:</strong> Designer & Social Media Branding Strategist</p>
-  </section>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+      
+      <!-- Kartu Gambar -->
+      <div class="overflow-hidden rounded-2xl shadow-lg group relative">
+        <img src="Frame 96.png" alt="Foto 1" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+      </div>
 
-  <main class="grid">
-    <div class="item">
-      <img src="Frame 1.png" alt="Design 1">
-      <div class="overlay"><h2>SIGHTMENTED.ID</h2></div>
+      <div class="overflow-hidden rounded-2xl shadow-lg group relative">
+        <img src="Frame 95.png" alt="Foto 2" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+      </div>
+
+      <div class="overflow-hidden rounded-2xl shadow-lg group relative">
+        <img src="Frame 99.png" alt="Foto 3" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+      </div>
+
+      <div class="overflow-hidden rounded-2xl shadow-lg group relative">
+        <img src="Frame 101.png" alt="Foto 4" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+      </div>
+
+      <div class="overflow-hidden rounded-2xl shadow-lg group relative">
+        <img src="Frame 100.png" alt="Foto 5" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+      </div>
+
+      <div class="overflow-hidden rounded-2xl shadow-lg group relative">
+        <img src="Frame 97.png" alt="Foto 6" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+      </div>
+
+      
     </div>
-    <div class="item">
-      <img src="Frame 2.png" alt="Design 2">
-      <div class="overlay"><h2>KOPILOAK</h2></div>
-    </div>
-    <div class="item">
-      <img src="Frame 3.png" alt="Design 3">
-      <div class="overlay"><h2>PORTEIGHT</h2></div>
-    </div>
-  </main>
+  </div>
 
-  <footer>
-    <h3>Get in Touch</h3>
-    <p><strong>Email:</strong> <a href="mailto:damarjati876@gmail.com">damarjati876@gmail.com</a></p>
-    <p><strong>Instagram:</strong> <a href="https://instagram.com/damarhtny" target="_blank">@damarhtny</a></p>
-    <p class="footer-tagline">“Design is the silent ambassador of your brand.” – Paul Rand</p>
-  </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
-
