--- a/sightmented.html
+++ b/sightmented.html
@@ -15,27 +15,27 @@
       
       <!-- Kartu Gambar -->
       <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="Frame 96.png" alt="Foto 1" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+        <img src="Frame%2096.png" alt="Foto 1" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
       </div>
 
       <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="Frame 95.png" alt="Foto 2" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+        <img src="Frame%2095.png" alt="Foto 2" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
       </div>
 
       <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="Frame 99.png" alt="Foto 3" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+        <img src="Frame%2099.png" alt="Foto 3" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
       </div>
 
       <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="Frame 101.png" alt="Foto 4" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+        <img src="Frame%20101.png" alt="Foto 4" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
       </div>
 
       <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="Frame 100.png" alt="Foto 5" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+        <img src="Frame%20100.png" alt="Foto 5" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
       </div>
 
       <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="Frame 97.png" alt="Foto 6" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+        <img src="Frame%2097.png" alt="Foto 6" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
       </div>
 
       
