--- a/sightmented.html
+++ b/sightmented.html
@@ -14,7 +14,7 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
       
          <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="Frame 96.png" alt="Foto 1" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+        <img src="Frame%2096.png" alt="Foto 1" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
       </div>
 
       <div class="overflow-hidden rounded-2xl shadow-lg group relative">
