--- a/sightmented.html
+++ b/sightmented.html
@@ -71,6 +71,10 @@
     </div>
     <div class="photo-card">
       <img src="Frame 101.png" alt="Foto 6">
+    <div class="photo-card">
+      <img src="Frame 101.png" alt="Foto 7">
+    <div class="photo-card">
+      <img src="Frame 101.png" alt="Foto 8">
     </div>
   </div>
 
