--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
         <img src="Frame%2097.png" alt="Foto 6" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
       </div>
 
+       <div class="overflow-hidden rounded-2xl shadow-lg group relative">
+        <img src="Frame%2097.png" alt="Foto 7" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+      </div>
+
+       <div class="overflow-hidden rounded-2xl shadow-lg group relative">
+        <img src="Frame%2097.png" alt="Foto 8" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
+      </div>
+
+
+
       
     </div>
   </div>
