--- a/index.html
+++ b/index.html
@@ -3,54 +3,76 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SIGHTMENTED.ID</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Galeri Elegan</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f5f5f5;
+    }
+
+    h1 {
+      text-align: center;
+      margin: 40px 0 20px;
+      font-size: 2.5em;
+      color: #333;
+    }
+
+    .gallery-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+      padding: 0 20px 40px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .photo-card {
+      overflow: hidden;
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      background-color: #fff;
+      transition: transform 0.3s ease;
+    }
+
+    .photo-card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      transition: transform 0.3s ease;
+      display: block;
+    }
+
+    .photo-card:hover img {
+      transform: scale(1.05);
+    }
+  </style>
 </head>
-<body class="bg-gray-100 font-sans">
+<body>
 
-  <div class="max-w-7xl mx-auto px-4 py-10">
-    <h1 class="text-4xl font-bold text-center text-gray-800 mb-10">SIGHTMENTED.ID</h1>
+  <h1>Galeri Elegan</h1>
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-      
-      <!-- Kartu Gambar -->
-      <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="Frame%2096.png" alt="Foto 1" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
-      </div>
-
-      <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="Frame%2095.png" alt="Foto 2" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
-      </div>
-
-      <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="Frame%2099.png" alt="Foto 3" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
-      </div>
-
-      <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="Frame%20101.png" alt="Foto 4" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
-      </div>
-
-      <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="Frame%20100.png" alt="Foto 5" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
-      </div>
-
-      <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="Frame%2097.png" alt="Foto 6" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
-      </div>
-
-       <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="Frame%2097.png" alt="Foto 7" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
-      </div>
-
-       <div class="overflow-hidden rounded-2xl shadow-lg group relative">
-        <img src="Frame%2097.png" alt="Foto 8" class="w-full h-60 object-cover transition-transform duration-300 group-hover:scale-105">
-      </div>
-
-
-
-      
+  <div class="gallery-container">
+    <div class="photo-card">
+      <img src="https://source.unsplash.com/random/600x400?sig=1" alt="Foto 1">
+    </div>
+    <div class="photo-card">
+      <img src="https://source.unsplash.com/random/600x400?sig=2" alt="Foto 2">
+    </div>
+    <div class="photo-card">
+      <img src="https://source.unsplash.com/random/600x400?sig=3" alt="Foto 3">
+    </div>
+    <div class="photo-card">
+      <img src="https://source.unsplash.com/random/600x400?sig=4" alt="Foto 4">
+    </div>
+    <div class="photo-card">
+      <img src="https://source.unsplash.com/random/600x400?sig=5" alt="Foto 5">
+    </div>
+    <div class="photo-card">
+      <img src="https://source.unsplash.com/random/600x400?sig=6" alt="Foto 6">
     </div>
   </div>
 
 </body>
 </html>
+
