--- a/sightmented.html
+++ b/sightmented.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SIGHTMENTED.ID</title>
+  <title>Galeri Elegan</title>
   <style>
     body {
       margin: 0;
@@ -50,36 +50,28 @@
 </head>
 <body>
 
-  <h1>SIGHTMENTED.ID</h1>
+  <h1>Galeri Elegan</h1>
 
-  
   <div class="gallery-container">
     <div class="photo-card">
-      <img src="Frame 95.png" alt="Foto 1">
+      <img src="https://source.unsplash.com/random/600x400?sig=1" alt="Foto 1">
     </div>
     <div class="photo-card">
-      <img src="Frame 96.png" alt="Foto 2">
+      <img src="https://source.unsplash.com/random/600x400?sig=2" alt="Foto 2">
     </div>
     <div class="photo-card">
-      <img src="Frame 97.png" alt="Foto 3">
+      <img src="https://source.unsplash.com/random/600x400?sig=3" alt="Foto 3">
     </div>
     <div class="photo-card">
-      <img src="Frame 99.png" alt="Foto 4">
+      <img src="https://source.unsplash.com/random/600x400?sig=4" alt="Foto 4">
     </div>
     <div class="photo-card">
-      <img src="Frame 100.png" alt="Foto 5">
+      <img src="https://source.unsplash.com/random/600x400?sig=5" alt="Foto 5">
     </div>
     <div class="photo-card">
-      <img src="Frame 101.png" alt="Foto 6">
+      <img src="https://source.unsplash.com/random/600x400?sig=6" alt="Foto 6">
     </div>
   </div>
 
 </body>
 </html>
-
-
-
-
-
-
-
