--- a/sightmented.html
+++ b/sightmented.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Galeri Elegan</title>
+  <title>SIGHTMENTED.ID</title>
   <style>
     body {
       margin: 0;
@@ -50,7 +50,7 @@
 </head>
 <body>
 
-  <h1>Galeri Elegan</h1>
+  <h1>SIGHTMENTED.ID</h1>
 
   <div class="gallery-container">
     <div class="photo-card">
