--- a/sightmented.html
+++ b/sightmented.html
@@ -54,22 +54,22 @@
 
   <div class="gallery-container">
     <div class="photo-card">
-      <img src="https://source.unsplash.com/random/600x400?sig=1" alt="Foto 1">
+      <img src="Frame 95.png" alt="Foto 1">
     </div>
     <div class="photo-card">
-      <img src="https://source.unsplash.com/random/600x400?sig=2" alt="Foto 2">
+      <img src="Frame 96.png" alt="Foto 2">
     </div>
     <div class="photo-card">
-      <img src="https://source.unsplash.com/random/600x400?sig=3" alt="Foto 3">
+      <img src="Frame 97.png" alt="Foto 3">
     </div>
     <div class="photo-card">
-      <img src="https://source.unsplash.com/random/600x400?sig=4" alt="Foto 4">
+      <img src="Frame 99.png" alt="Foto 4">
     </div>
     <div class="photo-card">
-      <img src="https://source.unsplash.com/random/600x400?sig=5" alt="Foto 5">
+      <img src="Frame 100.png" alt="Foto 5">
     </div>
     <div class="photo-card">
-      <img src="https://source.unsplash.com/random/600x400?sig=6" alt="Foto 6">
+      <img src="Frame 101.png" alt="Foto 6">
     </div>
   </div>
 
