--- a/sightmented.html
+++ b/sightmented.html
@@ -8,14 +8,14 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f5f5f5;
+      background-color: #003366 ;
     }
 
     h1 {
       text-align: center;
       margin: 40px 0 20px;
       font-size: 2.5em;
-      color: #333;
+      color: #FFFFFF;
     }
 
     .gallery-container {
