--- a/kopiloak.html
+++ b/kopiloak.html
@@ -34,7 +34,7 @@
       font-weight: bold;
     }
     .hero {
-      background: url('https://via.placeholder.com/1000x400') center/cover;
+      background: url('WEBSITE (2).png') center/cover;
       height: 400px;
       display: flex;
       align-items: center;
