--- a/kopiloak.html
+++ b/kopiloak.html
@@ -34,7 +34,7 @@
       font-weight: bold;
     }
     .hero {
-      background: url('WEBSITE (2).png') center/cover;
+      background: url('header hero.png') center/cover;
       height: 400px;
       display: flex;
       align-items: center;
