--- a/kopiloak.html
+++ b/kopiloak.html
@@ -122,6 +122,7 @@
   </header>
 
   <section class="hero">
+    <img src="9.png" alt="logo kopiloak">
     <h2>kopiloak.id</h2>
     <p>Your luxury coffee experience</p>
   </section>
