--- a/kopiloak.html
+++ b/kopiloak.html
@@ -25,7 +25,8 @@
       background: #00000033;
     }
     header h1 {
-      font-size: 1.5rem;
+      font-size: 1.5rem
+      height: 100px;
     }
     nav a {
       margin: 0 1rem;
@@ -112,7 +113,8 @@
 </head>
 <body>
   <header>
-    <img src="9.png" alt="logo kopiloak">
+    <img src="9.png" alt="logo kopiloak"
+      >
     <h1>kopiloak.id</h1>
     <nav>
       <a href="#">Home</a>
