--- a/kopiloak.html
+++ b/kopiloak.html
@@ -19,14 +19,14 @@
     }
     header {
       display: flex;
+      height: 100px
       justify-content: space-between;
       align-items: center;
       padding: 1rem 2rem;
       background: #00000033;
     }
     header h1 {
-      font-size: 1.5rem
-      height: 100px;
+      font-size: 1.5rem;
     }
     nav a {
       margin: 0 1rem;
