--- a/kopiloak.html
+++ b/kopiloak.html
@@ -19,7 +19,6 @@
     }
     header {
       display: flex;
-      height: 100px
       justify-content: space-between;
       align-items: center;
       padding: 1rem 2rem;
@@ -113,8 +112,7 @@
 </head>
 <body>
   <header>
-    <img src="9.png" alt="logo kopiloak"
-      >
+    <img src="9.png" alt="logo kopiloak" height: 100px>
     <h1>kopiloak.id</h1>
     <nav>
       <a href="#">Home</a>
