--- a/kopiloak.html
+++ b/kopiloak.html
@@ -112,7 +112,7 @@
 </head>
 <body>
   <header>
-    <img src="9.png" alt="logo kopiloak" height: 100px>
+    <img src="9.png" width="200" height="150" alt="Gambar kecil">
     <h1>kopiloak.id</h1>
     <nav>
       <a href="#">Home</a>
