--- a/kopiloak.html
+++ b/kopiloak.html
@@ -20,7 +20,7 @@
     header {
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: left;
       padding: 1rem 2rem;
       background: #00000033;
     }
