--- a/kopiloak.html
+++ b/kopiloak.html
@@ -20,8 +20,8 @@
     header {
       display: flex;
       justify-content: space-between;
-      align-items: left;
-      padding: 1rem 2rem;
+      align-items: center;
+      padding: 0;
       background: #00000033;
     }
     header h1 {
