--- a/kopiloak.html
+++ b/kopiloak.html
@@ -18,21 +18,11 @@
       line-height: 1.6;
     }
     header {
-     .logo-container {
-    display: flex;
-    align-items: center;
-  }
-
-  .logo-container img {
-    width: 90px;
-    height: 100px;
-    margin-right: 10px;
-  }
-
-  .logo-container h1 {
-    font-size: 1.8rem;
-    color: white;
-  }
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background: #00000033;
     }
     header h1 {
       font-size: 1.5rem;
