--- a/kopiloak.html
+++ b/kopiloak.html
@@ -122,7 +122,10 @@
       <a href="#contact">Contact</a>
     </nav>
   </header>
-
+  
+  <section class="hero">
+  </section>
+  
   <section class="section" id="origin">
     <h2>Origin</h2>
     <p>Kopi Luwak, also known as civet coffee, originates from Indonesia and is considered one of the rarest and most unique coffees in the world. Its story begins during the Dutch colonial period in the 18th century...</p>
