--- a/kopiloak.html
+++ b/kopiloak.html
@@ -128,7 +128,7 @@
   
   <section class="section" id="origin">
     <h2>Origin</h2>
-    <p>Kopi Luwak, also known as civet coffee, originates from Indonesia and is considered one of the rarest and most unique coffees in the world. Its story begins during the Dutch colonial period in the 18th century...</p>
+    <p>Kopi Luwak, also known as civet coffee, originates from Indonesia and is considered one of the rarest and most unique coffees in the world. Its story begins during the Dutch colonial period in the 18th century, when Indonesia was a major coffee-producing region under the control of the Dutch East India Company..</p>
   </section>
 
   <section class="section" id="product">
