--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     </div>
   </main>
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  
   <footer>
     <h3>Get in Touch</h3>
     <p><strong>Email:</strong> <a href="mailto:damarjati876@gmail.com">damarjati876@gmail.com</a></p>
