--- a/index.html
+++ b/index.html
@@ -49,5 +49,57 @@
 
   <script src="script.js"></script>
 </body>
+  <footer class="bg-green-700 text-white py-10 mt-12">
+  <div class="max-w-7xl mx-auto px-4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+    
+    <!-- About -->
+    <div>
+      <h3 class="text-xl font-semibold mb-4 text-green-100">About WOW</h3>
+      <p class="text-sm text-green-200">
+        WOW (Wonosobo on Web) adalah platform GIS interaktif untuk mengeksplorasi pariwisata dan data Wonosobo.
+      </p>
+    </div>
+
+    <!-- Quick Links -->
+    <div>
+      <h3 class="text-xl font-semibold mb-4 text-green-100">Quick Links</h3>
+      <ul class="space-y-2 text-sm text-green-200">
+        <li><a href="#" class="hover:underline">Home</a></li>
+        <li><a href="#" class="hover:underline">Statistics</a></li>
+        <li><a href="#" class="hover:underline">About</a></li>
+        <li><a href="#" class="hover:underline">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Contact Info -->
+    <div>
+      <h3 class="text-xl font-semibold mb-4 text-green-100">Contact Us</h3>
+      <ul class="text-sm text-green-200 space-y-2">
+        <li><i class="fas fa-map-marker-alt mr-2"></i> Wonosobo, Central Java</li>
+        <li><i class="fas fa-phone mr-2"></i> +62 286 321234</li>
+        <li><i class="fas fa-envelope mr-2"></i> info@wonosoboweb.id</li>
+      </ul>
+    </div>
+
+    <!-- Social Media -->
+    <div>
+      <h3 class="text-xl font-semibold mb-4 text-green-100">Follow Us</h3>
+      <div class="flex space-x-4 text-lg">
+        <a href="#" class="hover:text-green-300"><i class="fab fa-facebook"></i></a>
+        <a href="#" class="hover:text-green-300"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="hover:text-green-300"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="hover:text-green-300"><i class="fab fa-youtube"></i></a>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Bottom -->
+  <div class="border-t border-green-600 mt-8 pt-6 text-center text-sm text-green-300">
+    <p>&copy; 2025 WOW - Wonosobo on Web. All rights reserved.</p>
+    <p>Developed with ❤️ by Adyatma Damarjati Amarhathany</p>
+  </div>
+</footer>
+
 </html>
 
